# archre

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  gitleaks.toml  taskfile.yaml
.github/workflows/: deploy-changed.yaml
.taskfiles/devel/: Brewfile  taskfile.yaml
.taskfiles/infra/: taskfile.yaml
.taskfiles/sops/: taskfile.yaml
docs/: glossary.md  idea.md  interface.md  process.md  questions.md  report.md
infra/backend/: compose.local.yaml  compose.yaml  env.local.sops.yaml
scripts/: sops-decrypt-all.sh  sops-encrypt-all.sh
src/reporter/: .gitignore  Dockerfile  README.md  pyproject.toml
src/reporter/files/submission_florida/: florida_submission.json  florida_terms.json
src/reporter/files/submission_netherlands/: netherlands_edm_comparison.json  netherlands_exposure.json  netherlands_historical.json  netherlands_premium.json  netherlands_terms.json  netherlands_vehicle_count.json
src/reporter/files/submission_turkey/: turkey_aggregate.json  turkey_changes.json  turkey_submission.json  turkey_terms.json
src/reporter/src/: requirements.txt
src/reporter/src/reporter/: main.py
src/reporter/src/reporter/api/v1/endpoints/: contract_diff.py  health.py  report.py
src/reporter/src/reporter/core/: config.py
src/reporter/src/reporter/schemas/: contract_diff.py  health.py  report.py
src/reporter/src/reporter/util/: compare_contracts.py  contract_diff.py  significant_analysis.py
src/reporter/src/reporter/util/orchestrator/: florida_proposal_agent.py  netherlands_proposal_agent.py  orchestrator.py  turkey_proposal_agent.py
(+64 files in other folders)
