[project]
name = "flooq-reporter"
version = "0.1.0"
description = "flooq.io reporter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diff-match-patch>=20241021",
    "fastapi[all]>=0.115.7",
    "llama-index-embeddings-google-genai>=0.1.0",
    "llama-index-llms-google-genai>=0.1.7",
    "minio>=7.2.15",
    "pydantic>=2.10.6",
]

[tool.ruff]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[project.scripts]
api = "reporter.main:main"
